# rails_on_rust

./: .clang-format  .gitignore  Aptfile  Cargo.toml  Gemfile  Makefile  README.md  babel.config.js  build.rs  crates.js  main.py  os.py  package.json  postcss.config.js  requirements.txt  search-index.js  settings.html  setup.py  source-files.js  tailwind.config.js  test.py  tsconfig.json  tsconfig.tsbuildinfo
.github/workflows/: build.yml  codeql-analysis.yml  main.yml  rust.yml  test.yml
app/controllers/: api_controller.rb  application_controller.rb  main_controller.rb
app/javascript/wasm/: Cargo.toml  Makefile
app/javascript/wasm/src/: lib.rs
config/: application.rb  credentials.yml.enc  database.yml  routes.rb  secrets.yml  webpacker.yml
config/environments/: development.rb  production.rb
config/webpack/: sass.js
cython/: index.c  index.h  index.pyx  main.c
js/: index.js
main/: all.html  fn.main.html  index.html
modules/: include.rs  lib.rs  main.rs
modules/c/: c_cpp.cpp  c_hello.c  c_hello.cpp  c_math.c  c_math.cpp  c_random.c  c_random.cpp  c_random.h  foo.c  foo.s  hello.c
modules/include/: c_cpp.hpp  c_cpp.rs  c_hello.hpp  c_hello.rs  c_math.hpp  c_math.rs  c_random.rs
modules/os/: linux.rs  macos.rs  mod.rs  windows.rs
public/assets/: .sprockets-manifest-43be22c0b4fa8c52e17586409bb4efbd.json  application-5c74a4d2d0f34ab7051bb35d7f66c9c4afad4c1a9ee3f458e38c25f57fd515ce.css  application-6640cdf13937f40ac1ba7ef501036ad39b59f39c5d0c09c8b370108e40f6422c.css  (+7 more)
rust_api/: all.html  fn.DN_to_BN.html  fn.ajax.html  fn.cpp.html  fn.fact.html  fn.gcd.html  fn.hello.html  fn.k.html  fn.lcm.html  fn.math.html  fn.nCr.html  fn.nPr.html  fn.os_name.html  fn.pow.html  fn.quotient_not_surplus.html  fn.random.html  index.html  sidebar-items.js
src/: main.pyx
src/main/: main.rs.html
wasm/: Cargo.toml  Makefile
(+45 files in other folders)
