[package]
authors = ["Riya <hiyoriorria@gmail.com>"]
description = "wasm-pack"
edition = "2018"
license = "MIT/Apache-2.0"
name = "wasm_riya_hiyori"
repository = "https://github.com/riya81/rails_on_rust/tree/main/app/javascript/wasm"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
wasm-bindgen = "0.2"
[lib]
crate-type = ["cdylib"]
