[package]
authors = ["Riya <hiyoriorria@gmail.com>"]
description = "wasm-pack"
edition = "2018"
license = "MIT/Apache-2.0"
name = "wasm_riya_hiyori"
repository = "https://github.com/riya81/rails_on_rust/tree/main/app/javascript/wasm"
version = "0.4.26"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.6"
futures = "0.3.5"
js-sys = "0.3.44"
serde = {version = "1.0", features = ["derive"]}
serde_derive = "1.0"
serde_json = "1.0"
wasm-bindgen = {version = "0.2.67", features = ["serde-serialize"]}
wasm-bindgen-futures = "0.4.17"
[lib]
crate-type = ["cdylib"]
[dependencies.web-sys]
features = [
  'Window',
  'console',
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
]
version = "0.3.44"
